--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,234 @@
-aiohttp==3.7.4.post0
-aioice==0.7.5
-aiortc==1.2.0
-av==8.0.3
-cryptography==3.4.7
-#opencv-python==4.5.2.54
-opencv-python
-gunicorn
-aiohttp_cors
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+aiohttp=3.7.4.post0=pypi_0
+aiohttp-cors=0.7.0=pypi_0
+aioice=0.9.0=pypi_0
+aiortc=1.6.0=pypi_0
+anyio=3.5.0=py38haa95532_0
+argon2-cffi=21.3.0=pyhd3eb1b0_0
+argon2-cffi-bindings=21.2.0=py38h2bbff1b_0
+asttokens=2.0.5=pyhd3eb1b0_0
+async-lru=2.0.4=py38haa95532_0
+async-timeout=3.0.1=pypi_0
+attrs=23.1.0=py38haa95532_0
+av=11.0.0=pypi_0
+babel=2.11.0=py38haa95532_0
+backcall=0.2.0=pyhd3eb1b0_0
+beautifulsoup4=4.12.2=py38haa95532_0
+blas=1.0=mkl
+bleach=4.1.0=pyhd3eb1b0_0
+brotli-python=1.0.9=py38hd77b12b_7
+ca-certificates=2023.08.22=haa95532_0
+certifi=2023.11.17=py38haa95532_0
+cffi=1.16.0=py38h2bbff1b_0
+chardet=4.0.0=pypi_0
+charset-normalizer=3.3.2=pypi_0
+colorama=0.4.6=py38haa95532_0
+comm=0.1.2=py38haa95532_0
+contourpy=1.1.1=pypi_0
+crc32c=2.3.post0=pypi_0
+cryptography=41.0.7=pypi_0
+cuda-cccl=12.3.101=0
+cuda-cudart=11.8.89=0
+cuda-cudart-dev=11.8.89=0
+cuda-cupti=11.8.87=0
+cuda-libraries=11.8.0=0
+cuda-libraries-dev=11.8.0=0
+cuda-nvrtc=11.8.89=0
+cuda-nvrtc-dev=11.8.89=0
+cuda-nvtx=11.8.86=0
+cuda-profiler-api=12.3.101=0
+cuda-runtime=11.8.0=0
+cycler=0.12.1=pypi_0
+debugpy=1.6.7=py38hd77b12b_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+dnspython=2.4.2=pypi_0
+executing=0.8.3=pyhd3eb1b0_0
+filelock=3.13.1=py38haa95532_0
+fonttools=4.46.0=pypi_0
+freetype=2.12.1=ha860e81_0
+fsspec=2023.12.0=pypi_0
+giflib=5.2.1=h8cc25b3_3
+gitdb=4.0.11=pypi_0
+gitpython=3.1.40=pypi_0
+gmpy2=2.1.2=py38h7f96b67_0
+google-crc32c=1.5.0=pypi_0
+gunicorn=21.2.0=pypi_0
+icu=73.1=h6c2663c_0
+idna=3.6=pypi_0
+ifaddr=0.2.0=pypi_0
+importlib-metadata=6.0.0=py38haa95532_0
+importlib-resources=6.1.1=pypi_0
+importlib_metadata=6.0.0=hd3eb1b0_0
+importlib_resources=6.1.0=py38haa95532_0
+intel-openmp=2023.1.0=h59b6b97_46320
+ipykernel=6.25.0=py38h9909e9c_0
+ipython=8.12.2=py38haa95532_0
+ipywidgets=8.0.4=py38haa95532_0
+jedi=0.18.1=py38haa95532_1
+jinja2=3.1.2=py38haa95532_0
+jpeg=9e=h2bbff1b_1
+json5=0.9.6=pyhd3eb1b0_0
+jsonschema=4.19.2=py38haa95532_0
+jsonschema-specifications=2023.7.1=py38haa95532_0
+jupyter=1.0.0=py38haa95532_8
+jupyter-lsp=2.2.0=py38haa95532_0
+jupyter_client=8.6.0=py38haa95532_0
+jupyter_console=6.6.3=py38haa95532_0
+jupyter_core=5.5.0=py38haa95532_0
+jupyter_events=0.8.0=py38haa95532_0
+jupyter_server=2.10.0=py38haa95532_0
+jupyter_server_terminals=0.4.4=py38haa95532_1
+jupyterlab=4.0.8=py38haa95532_0
+jupyterlab_pygments=0.1.2=py_0
+jupyterlab_server=2.25.1=py38haa95532_0
+jupyterlab_widgets=3.0.9=py38haa95532_0
+kiwisolver=1.4.5=pypi_0
+krb5=1.20.1=h5b6d351_0
+lerc=3.0=hd77b12b_0
+libclang=14.0.6=default_hb5a9fac_1
+libclang13=14.0.6=default_h8e68704_1
+libcublas=11.11.3.6=0
+libcublas-dev=11.11.3.6=0
+libcufft=10.9.0.58=0
+libcufft-dev=10.9.0.58=0
+libcurand=10.3.4.101=0
+libcurand-dev=10.3.4.101=0
+libcusolver=11.4.1.48=0
+libcusolver-dev=11.4.1.48=0
+libcusparse=11.7.5.86=0
+libcusparse-dev=11.7.5.86=0
+libdeflate=1.17=h2bbff1b_1
+libffi=3.4.4=hd77b12b_0
+libjpeg-turbo=2.0.0=h196d8e1_0
+libnpp=11.8.0.86=0
+libnpp-dev=11.8.0.86=0
+libnvjpeg=11.9.0.86=0
+libnvjpeg-dev=11.9.0.86=0
+libpng=1.6.39=h8cc25b3_0
+libpq=12.15=h906ac69_1
+libsodium=1.0.18=h62dcd97_0
+libtiff=4.5.1=hd77b12b_0
+libuv=1.44.2=h2bbff1b_0
+libwebp=1.3.2=hbc33d0d_0
+libwebp-base=1.3.2=h2bbff1b_0
+lz4-c=1.9.4=h2bbff1b_0
+markupsafe=2.1.3=pypi_0
+matplotlib=3.7.4=pypi_0
+matplotlib-inline=0.1.6=py38haa95532_0
+mistune=2.0.4=py38haa95532_0
+mkl=2023.1.0=h6b88ed4_46358
+mkl-service=2.4.0=py38h2bbff1b_1
+mkl_fft=1.3.8=py38h2bbff1b_0
+mkl_random=1.2.4=py38h59b6b97_0
+mpc=1.1.0=h7edee0f_1
+mpfr=4.0.2=h62dcd97_1
+mpir=3.0.0=hec2e145_1
+mpmath=1.3.0=py38haa95532_0
+multidict=6.0.4=pypi_0
+nbclient=0.8.0=py38haa95532_0
+nbconvert=7.10.0=py38haa95532_0
+nbformat=5.9.2=py38haa95532_0
+nest-asyncio=1.5.6=py38haa95532_0
+netifaces=0.11.0=pypi_0
+networkx=3.1=py38haa95532_0
+notebook=7.0.6=py38haa95532_0
+notebook-shim=0.2.3=py38haa95532_0
+numpy=1.24.4=pypi_0
+numpy-base=1.24.3=py38h8a87ada_1
+opencv-python=4.8.1.78=pypi_0
+openjpeg=2.4.0=h4fc8c34_0
+openssl=3.0.12=h2bbff1b_0
+overrides=7.4.0=py38haa95532_0
+packaging=23.2=pypi_0
+pandas=2.0.3=pypi_0
+pandocfilters=1.5.0=pyhd3eb1b0_0
+parso=0.8.3=pyhd3eb1b0_0
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=10.1.0=pypi_0
+pip=23.3.1=py38haa95532_0
+pkgutil-resolve-name=1.3.10=py38haa95532_0
+platformdirs=3.10.0=py38haa95532_0
+ply=3.11=py38_0
+prometheus_client=0.14.1=py38haa95532_0
+prompt-toolkit=3.0.36=py38haa95532_0
+prompt_toolkit=3.0.36=hd3eb1b0_0
+psutil=5.9.6=pypi_0
+pure_eval=0.2.2=pyhd3eb1b0_0
+py-cpuinfo=9.0.0=pypi_0
+pycparser=2.21=pyhd3eb1b0_0
+pyee=11.1.0=pypi_0
+pygments=2.15.1=py38haa95532_1
+pylibsrtp=0.9.1=pypi_0
+pyopenssl=23.3.0=pypi_0
+pyparsing=3.1.1=pypi_0
+pyqt=5.15.10=py38hd77b12b_0
+pyqt5-sip=12.13.0=py38h2bbff1b_0
+pysocks=1.7.1=py38haa95532_0
+python=3.8.18=h1aa4202_0
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python-fastjsonschema=2.16.2=py38haa95532_0
+python-json-logger=2.0.7=py38haa95532_0
+pytorch=2.1.1=py3.8_cuda11.8_cudnn8_0
+pytorch-cuda=11.8=h24eeafa_5
+pytorch-mutex=1.0=cuda
+pytz=2023.3.post1=py38haa95532_0
+pywin32=305=py38h2bbff1b_0
+pywinpty=2.0.10=py38h5da7b33_0
+pyyaml=6.0.1=py38h2bbff1b_0
+pyzmq=25.1.0=py38hd77b12b_0
+qt-main=5.15.2=h19c9488_10
+qtconsole=5.5.0=py38haa95532_0
+qtpy=2.4.1=py38haa95532_0
+referencing=0.30.2=py38haa95532_0
+requests=2.31.0=py38haa95532_0
+rfc3339-validator=0.1.4=py38haa95532_0
+rfc3986-validator=0.1.1=py38haa95532_0
+rpds-py=0.10.6=py38h062c2fa_0
+scipy=1.10.1=pypi_0
+seaborn=0.13.0=pypi_0
+send2trash=1.8.2=py38haa95532_0
+setuptools=68.0.0=py38haa95532_0
+sip=6.7.12=py38hd77b12b_0
+six=1.16.0=pyhd3eb1b0_1
+smmap=5.0.1=pypi_0
+sniffio=1.2.0=py38haa95532_1
+soupsieve=2.5=py38haa95532_0
+sqlite=3.41.2=h2bbff1b_0
+stack_data=0.2.0=pyhd3eb1b0_0
+sympy=1.12=py38haa95532_0
+tbb=2021.8.0=h59b6b97_0
+terminado=0.17.1=py38haa95532_0
+thop=0.1.1-2209072238=pypi_0
+tinycss2=1.2.1=py38haa95532_0
+tk=8.6.12=h2bbff1b_0
+tomli=2.0.1=py38haa95532_0
+torch=2.1.1=pypi_0
+torchaudio=2.1.1=pypi_0
+torchvision=0.16.1=pypi_0
+tornado=6.3.3=py38h2bbff1b_0
+tqdm=4.66.1=pypi_0
+traitlets=5.7.1=py38haa95532_0
+typing-extensions=4.8.0=pypi_0
+typing_extensions=4.7.1=py38haa95532_0
+tzdata=2023.3=pypi_0
+ultralytics=8.0.222=pypi_0
+urllib3=2.1.0=pypi_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wcwidth=0.2.5=pyhd3eb1b0_0
+webencodings=0.5.1=py38_1
+websocket-client=0.58.0=py38haa95532_4
+wheel=0.41.2=py38haa95532_0
+widgetsnbextension=4.0.5=py38haa95532_0
+win_inet_pton=1.1.0=py38haa95532_0
+winpty=0.4.3=4
+xz=5.4.5=h8cc25b3_0
+yaml=0.2.5=he774522_0
+yarl=1.9.3=pypi_0
+zeromq=4.3.4=hd77b12b_0
+zipp=3.17.0=pypi_0
+zlib=1.2.13=h8cc25b3_0
+zstd=1.5.5=hd43e919_0
